<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/border_one" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/uncial_antiqua"
                android:text="@string/theme"
                android:textColor="@color/colorText"
                android:textSize="48sp" />
        </RelativeLayout>
        <TextView
            style="@style/TextAppearance.AppCompat.White.NormalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/macondo"
            android:text="@string/quiz"
            android:textAllCaps="true" />
        <!-- 1st Question - multiple answers !-->
        <TextView
            style="@style/TextAppearance.AppCompat.White.NormalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ans_1_1"
                style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox.Drawable"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/ans_1_A" />

            <CheckBox
                android:id="@+id/ans_1_2"
                style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox.Drawable"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/ans_1_B" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ans_1_3"
                style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox.Drawable"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/ans_1_C" />

            <CheckBox
                android:id="@+id/ans_1_4"
                style="@style/Base.Widget.AppCompat.CompoundButton.CheckBox.Drawable"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:text="@string/ans_1_D" />
        </LinearLayout>
        <!-- 2nd Question - text entry !-->
        <TextView
            style="@style/TextAppearance.AppCompat.White.NormalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <EditText
            android:id="@+id/text_ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:defaultFocusHighlightEnabled="false"
            android:focusedByDefault="false"
            android:hint="@string/number"
            android:inputType="number"
            android:paddingRight="32dp"
            android:textColor="@color/colorText" />

        <!-- 3rd Question - single answer !-->
        <TextView
            style="@style/TextAppearance.AppCompat.White.NormalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <RadioButton
                    android:id="@+id/ans_3"
                    style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.Drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_3_A" />

                <RadioButton
                    style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.Drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_3_B" />

                <RadioButton
                    style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.Drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_3_C" />

                <RadioButton
                    style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton.Drawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_3_D" />

        </RadioGroup>

        <!-- 4th Question - Picture question !-->
        <TextView
            style="@style/TextAppearance.AppCompat.White.NormalSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4" />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/axe"
                    android:onClick="badPicture"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/helmet"
                    android:onClick="badPicture"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/futhark"
                    android:onClick="goodPicture"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/stone"
                    android:onClick="badPicture"/>

            </LinearLayout>

        </LinearLayout>


        <!-- Score submission !-->
        <Button
            android:layout_marginTop="16dp"
            android:layout_width="114dp"
            android:layout_height="40dp"
            android:background="@drawable/border_two"
            android:fontFamily="@font/macondo"
            android:onClick="submitAnswers"
            android:text="@string/submit"
            android:textColor="@color/colorText"
            android:layout_gravity="center_horizontal"
            android:textSize="32sp"
            />


    </LinearLayout>
</ScrollView>
